[feat] mock API와 swagger 명세 완료